OIDC object gets used via a middleware to add a homieId to requests for ease of API use
